made logo smaller for 1200 to 992 size as it was overlapping. Fix for video size on mobile

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -1271,6 +1271,10 @@ content: "";
 #videoModal {
 	.modal-dialog {
     	max-width:75%;
+
+    	@include media-breakpoint-only(phone) {
+				max-width:100%;
+			}	
 	}
 	.modal-content {
     	background-color:transparent;
